--- a/freelance-camp-fe/app/documents/documents.component.html
+++ b/freelance-camp-fe/app/documents/documents.component.html
@@ -1,4 +1,4 @@
-<h1>Documents</h1>
+<h1>{{ pageTitle }}</h1>
 
 <div *ngFor="let doc of documents">
   <h3>{{ doc.title }}</h3>
@@ -10,7 +10,7 @@
   </div>
 
   <p>
-    {{ doc.udated_at }}
+    {{ doc.updated_at }}
   </p>
 
   <p>
