added validations for form submission

--- a/freelance-camp-fe/app/proposal/proposal-new.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-new.component.html
@@ -11,8 +11,12 @@
              name="customer"
              #customer='ngModel'
              [(ngModel)]="proposal.customer"
-      >       
+      >
+      <div [hidden]="customer.valid || customer.pristine">
+        Customer name is required
+      </div>
     </div>
+
     <div class="form-group">
       <label for="portfolio_url">Portfolio URL</label>
       <input type="text"
@@ -21,7 +25,10 @@
              name="portfolio_url"
              #portfolio_url='ngModel'
              [(ngModel)]="proposal.portfolio_url"
-      >       
+      >
+      <div [hidden]="portfolio_url.valid || portfolio_url.pristine">
+        A Portfolio URL is required
+      </div>
     </div>
     <div class="form-group">
       <label for="tools">Tools that you'll use on the project</label>
@@ -32,7 +39,10 @@
              name="tools"
              #tools='ngModel'
              [(ngModel)]="proposal.tools"
-      >       
+      >
+      <div [hidden]="tools.valid || tools.pristine">
+        you need to enter tools used for your project
+      </div>
     </div>
     <div class="form-group">
       <label for="estimated_hours">hours it will take to complete the project</label>
@@ -42,7 +52,10 @@
              name="estimated_hours"
              #estimated_hours='ngModel'
              [(ngModel)]="proposal.estimated_hours"
-      >       
+      >
+      <div [hidden]="estimated_hours.valid || estimated_hours.pristine">
+        you need to enter estimated hours for your project
+      </div>
     </div>
     <div class="form-group">
       <label for="hourly_rate">Hourly rate</label>
@@ -52,7 +65,10 @@
              name="hourly_rate"
              #hourly_rate='ngModel'
              [(ngModel)]="proposal.hourly_rate"
-      >       
+      >
+      <div [hidden]="hourly_rate.valid || hourly_rate.pristine">
+        you need to enter your hourly rate for your project
+      </div>
     </div>
     <div class="form-group">
       <label for="weeks_to_complete">Weeks to complete</label>
@@ -62,7 +78,10 @@
              name="weeks_to_complete"
              #weeks_to_complete='ngModel'
              [(ngModel)]="proposal.weeks_to_complete"
-      >       
+      >
+      <div [hidden]="weeks_to_complete.valid || weeks_to_complete.pristine">
+        you need to enter the estimated weeks it will take to complete the project
+      </div>  
     </div>
     <div class="form-group">
       <label for="client_email">Clients email <em>(Optional)</em></label>
@@ -103,6 +122,7 @@
   <p>
     i am excited to work with you and build out this project.
   </p>
+
 </div>
 
 <!-- [()] this syntax is to set something else on the page like an api -->
