--- a/freelance-camp-fe/app/proposal/proposal-new.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-new.component.html
@@ -1,128 +1,136 @@
-<h1>Create a proposal</h1>
+<div class="card container form-container">
+  <div class="row">
 
-<div>
-  <form #proposalForm='ngForm'>
-    <div class="form-group">
-      <label for="customer">Customer Name</label>
-      <input type="text"
-             id="customer"
-             placeholder="ABC company"
-             required
-             name="customer"
-             #customer='ngModel'
-             [(ngModel)]="proposal.customer"
-      >
-      <div [hidden]="customer.valid || customer.pristine">
-        Customer name is required
+    <div class="col-md-6">
+      <h1>Create a proposal</h1>
+      <div>
+        <form #proposalForm='ngForm'>
+          <div class="form-group">
+            <label for="customer">Customer Name</label>
+            <input type="text"
+                   id="customer"
+                   placeholder="ABC company"
+                   required
+                   name="customer"
+                   #customer='ngModel'
+                   [(ngModel)]="proposal.customer"
+            >
+            <div [hidden]="customer.valid || customer.pristine">
+              Customer name is required
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="portfolio_url">Portfolio URL</label>
+            <input type="text"
+                   id="portfolio_url"
+                   required
+                   name="portfolio_url"
+                   #portfolio_url='ngModel'
+                   [(ngModel)]="proposal.portfolio_url"
+            >
+            <div [hidden]="portfolio_url.valid || portfolio_url.pristine">
+              A Portfolio URL is required
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="tools">Tools that you'll use on the project</label>
+            <input type="text"
+                   id="tools"
+                   placeholder="Ruby on Rails, Angular, etc"
+                   required
+                   name="tools"
+                   #tools='ngModel'
+                   [(ngModel)]="proposal.tools"
+            >
+            <div [hidden]="tools.valid || tools.pristine">
+              you need to enter tools used for your project
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="estimated_hours">hours it will take to complete the project</label>
+            <input type="text"
+                   id="estimated_hours"
+                   required
+                   name="estimated_hours"
+                   #estimated_hours='ngModel'
+                   [(ngModel)]="proposal.estimated_hours"
+            >
+            <div [hidden]="estimated_hours.valid || estimated_hours.pristine">
+              you need to enter estimated hours for your project
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="hourly_rate">Hourly rate</label>
+            <input type="number"
+                   id="hourly_rate"
+                   required
+                   name="hourly_rate"
+                   #hourly_rate='ngModel'
+                   [(ngModel)]="proposal.hourly_rate"
+            >
+            <div [hidden]="hourly_rate.valid || hourly_rate.pristine">
+              you need to enter your hourly rate for your project
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="weeks_to_complete">Weeks to complete</label>
+            <input type="text"
+                   id="weeks_to_complete"
+                   required
+                   name="weeks_to_complete"
+                   #weeks_to_complete='ngModel'
+                   [(ngModel)]="proposal.weeks_to_complete"
+            >
+            <div [hidden]="weeks_to_complete.valid || weeks_to_complete.pristine">
+              you need to enter the estimated weeks it will take to complete the project
+            </div>  
+          </div>
+          <div class="form-group">
+            <label for="client_email">Clients email <em>(Optional)</em></label>
+            <input type="text"
+                   id="client_email"
+                   placeholder="foo@foo.com" 
+                   name="client_email"
+                   #client_email='ngModel'
+                   [(ngModel)]="proposal.client_email"
+            >       
+          </div>
+        </form>
       </div>
     </div>
 
-    <div class="form-group">
-      <label for="portfolio_url">Portfolio URL</label>
-      <input type="text"
-             id="portfolio_url"
-             required
-             name="portfolio_url"
-             #portfolio_url='ngModel'
-             [(ngModel)]="proposal.portfolio_url"
-      >
-      <div [hidden]="portfolio_url.valid || portfolio_url.pristine">
-        A Portfolio URL is required
+    <div class="col-md-6">
+      <div>
+        <p>Hi {{ proposal.customer }},</p>
+
+        <p>
+          it was a pleasure getting to meet with you and review your project requirements, i believe it is a great fit for the types of applications that i build out. please feel free to check out some of my past projects here.
+        </p>
+
+        <p>
+          to successfully build out the application i will be utilizing {{ proposal.tools }}, and a number of other tools to ensure that the project follows industry wide best practices
+        <a href="{{ proposal.portfolio_url }}">here</a></p>
+
+        <p>
+          ensuring that you are fully informed is one of my top priorities, so in addition to incorporating everything that we have discussed, i will aso be creating a project management dashboard and sending you a project update message daily so that you can have a transparent view of the development as it takes place.
+        </p>
+
+        <p>
+          to accomplish the project and meet the requirements that we have discussed, i am estimating that it will take {{ proposal.estimated_hours}} hours in development time to complete. the project should take {{ proposal.weeks_to_complete }} weeks to complete and with my hourly rate of {{ proposal.hourly_rate }}/hour, the estimated total will be {{ proposal.hourly_rate * proposal.estimated_hours }}.
+        </p>
+
+        <p>
+          the next step from here is to set up a metting to finalize the project and sign contracts.
+        </p>
+
+        <p>
+          i am excited to work with you and build out this project.
+        </p>
+
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="tools">Tools that you'll use on the project</label>
-      <input type="text"
-             id="tools"
-             placeholder="Ruby on Rails, Angular, etc"
-             required
-             name="tools"
-             #tools='ngModel'
-             [(ngModel)]="proposal.tools"
-      >
-      <div [hidden]="tools.valid || tools.pristine">
-        you need to enter tools used for your project
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="estimated_hours">hours it will take to complete the project</label>
-      <input type="text"
-             id="estimated_hours"
-             required
-             name="estimated_hours"
-             #estimated_hours='ngModel'
-             [(ngModel)]="proposal.estimated_hours"
-      >
-      <div [hidden]="estimated_hours.valid || estimated_hours.pristine">
-        you need to enter estimated hours for your project
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="hourly_rate">Hourly rate</label>
-      <input type="number"
-             id="hourly_rate"
-             required
-             name="hourly_rate"
-             #hourly_rate='ngModel'
-             [(ngModel)]="proposal.hourly_rate"
-      >
-      <div [hidden]="hourly_rate.valid || hourly_rate.pristine">
-        you need to enter your hourly rate for your project
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="weeks_to_complete">Weeks to complete</label>
-      <input type="text"
-             id="weeks_to_complete"
-             required
-             name="weeks_to_complete"
-             #weeks_to_complete='ngModel'
-             [(ngModel)]="proposal.weeks_to_complete"
-      >
-      <div [hidden]="weeks_to_complete.valid || weeks_to_complete.pristine">
-        you need to enter the estimated weeks it will take to complete the project
-      </div>  
-    </div>
-    <div class="form-group">
-      <label for="client_email">Clients email <em>(Optional)</em></label>
-      <input type="text"
-             id="client_email"
-             placeholder="foo@foo.com" 
-             name="client_email"
-             #client_email='ngModel'
-             [(ngModel)]="proposal.client_email"
-      >       
-    </div>
-  </form>
+
+  </div> 
+
 </div>
-
-<div>
-  <p>Hi {{ proposal.customer }},</p>
-
-  <p>
-    it was a pleasure getting to meet with you and review your project requirements, i believe it is a great fit for the types of applications that i build out. please feel free to check out some of my past projects here.
-  </p>
-
-  <p>
-    to successfully build out the application i will be utilizing {{ proposal.tools }}, and a number of other tools to ensure that the project follows industry wide best practices
-  <a href="{{ proposal.portfolio_url }}">here</a></p>
-
-  <p>
-    ensuring that you are fully informed is one of my top priorities, so in addition to incorporating everything that we have discussed, i will aso be creating a project management dashboard and sending you a project update message daily so that you can have a transparent view of the development as it takes place.
-  </p>
-
-  <p>
-    to accomplish the project and meet the requirements that we have discussed, i am estimating that it will take {{ proposal.estimated_hours}} hours in development time to complete. the project should take {{ proposal.weeks_to_complete }} weeks to complete and with my hourly rate of {{ proposal.hourly_rate }}/hour, the estimated total will be {{ proposal.hourly_rate * proposal.estimated_hours }}.
-  </p>
-
-  <p>
-    the next step from here is to set up a metting to finalize the project and sign contracts.
-  </p>
-
-  <p>
-    i am excited to work with you and build out this project.
-  </p>
-
-</div>
-
-<!-- [()] this syntax is to set something else on the page like an api -->
