added danger alerts for validations in proposal form

--- a/freelance-camp-fe/app/proposal/proposal-new.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-new.component.html
@@ -15,7 +15,9 @@
                    #customer='ngModel'
                    [(ngModel)]="proposal.customer"
             >
-            <div [hidden]="customer.valid || customer.pristine">
+            <div [hidden]="customer.valid || customer.pristine"
+              class='alert alert-danger'
+            >
               Customer name is required
             </div>
           </div>
@@ -29,7 +31,9 @@
                    #portfolio_url='ngModel'
                    [(ngModel)]="proposal.portfolio_url"
             >
-            <div [hidden]="portfolio_url.valid || portfolio_url.pristine">
+            <div [hidden]="portfolio_url.valid || portfolio_url.pristine"
+              class='alert alert-danger'
+            >
               A Portfolio URL is required
             </div>
           </div>
@@ -43,7 +47,9 @@
                    #tools='ngModel'
                    [(ngModel)]="proposal.tools"
             >
-            <div [hidden]="tools.valid || tools.pristine">
+            <div [hidden]="tools.valid || tools.pristine"
+              class='alert alert-danger'
+            >
               you need to enter tools used for your project
             </div>
           </div>
@@ -56,7 +62,9 @@
                    #estimated_hours='ngModel'
                    [(ngModel)]="proposal.estimated_hours"
             >
-            <div [hidden]="estimated_hours.valid || estimated_hours.pristine">
+            <div [hidden]="estimated_hours.valid || estimated_hours.pristine"
+              class='alert alert-danger'
+            >
               you need to enter estimated hours for your project
             </div>
           </div>
@@ -69,7 +77,9 @@
                    #hourly_rate='ngModel'
                    [(ngModel)]="proposal.hourly_rate"
             >
-            <div [hidden]="hourly_rate.valid || hourly_rate.pristine">
+            <div [hidden]="hourly_rate.valid || hourly_rate.pristine"
+              class='alert alert-danger'
+            >
               you need to enter your hourly rate for your project
             </div>
           </div>
@@ -82,7 +92,9 @@
                    #weeks_to_complete='ngModel'
                    [(ngModel)]="proposal.weeks_to_complete"
             >
-            <div [hidden]="weeks_to_complete.valid || weeks_to_complete.pristine">
+            <div [hidden]="weeks_to_complete.valid || weeks_to_complete.pristine"
+              class='alert alert-danger'
+            >
               you need to enter the estimated weeks it will take to complete the project
             </div>  
           </div>
