--- a/freelance-camp-fe/app/proposal/proposal-new.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-new.component.html
@@ -8,6 +8,7 @@
           <div class="form-group">
             <label for="customer">Customer Name</label>
             <input type="text"
+                   class="form-control"
                    id="customer"
                    placeholder="ABC company"
                    required
@@ -25,6 +26,7 @@
           <div class="form-group">
             <label for="portfolio_url">Portfolio URL</label>
             <input type="text"
+                   class="form-control"
                    id="portfolio_url"
                    required
                    name="portfolio_url"
@@ -40,6 +42,7 @@
           <div class="form-group">
             <label for="tools">Tools that you'll use on the project</label>
             <input type="text"
+                   class="form-control"
                    id="tools"
                    placeholder="Ruby on Rails, Angular, etc"
                    required
@@ -56,6 +59,7 @@
           <div class="form-group">
             <label for="estimated_hours">hours it will take to complete the project</label>
             <input type="text"
+                   class="form-control"
                    id="estimated_hours"
                    required
                    name="estimated_hours"
@@ -68,15 +72,21 @@
               you need to enter estimated hours for your project
             </div>
           </div>
+          
           <div class="form-group">
-            <label for="hourly_rate">Hourly rate</label>
-            <input type="number"
-                   id="hourly_rate"
-                   required
-                   name="hourly_rate"
-                   #hourly_rate='ngModel'
-                   [(ngModel)]="proposal.hourly_rate"
-            >
+              <label for="hourly_rate">Hourly rate</label>
+            <div class="input-group">
+              <span class="input-group-addon">$</span>
+              <input type="number"
+                     class="form-control"
+                     id="hourly_rate"
+                     required
+                     name="hourly_rate"
+                     #hourly_rate='ngModel'
+                     [(ngModel)]="proposal.hourly_rate"
+              >
+            </div>
+
             <div [hidden]="hourly_rate.valid || hourly_rate.pristine"
               class='alert alert-danger'
             >
@@ -86,6 +96,7 @@
           <div class="form-group">
             <label for="weeks_to_complete">Weeks to complete</label>
             <input type="text"
+                   class="form-control"
                    id="weeks_to_complete"
                    required
                    name="weeks_to_complete"
@@ -101,6 +112,7 @@
           <div class="form-group">
             <label for="client_email">Clients email <em>(Optional)</em></label>
             <input type="text"
+                   class="form-control"
                    id="client_email"
                    placeholder="foo@foo.com" 
                    name="client_email"
