--- a/freelance-camp-fe/app/proposal/proposal-new.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-new.component.html
@@ -141,7 +141,7 @@
         </p>
 
         <p>
-          to accomplish the project and meet the requirements that we have discussed, i am estimating that it will take {{ proposal.estimated_hours}} hours in development time to complete. the project should take {{ proposal.weeks_to_complete }} weeks to complete and with my hourly rate of {{ proposal.hourly_rate }}/hour, the estimated total will be {{ proposal.hourly_rate * proposal.estimated_hours }}.
+          to accomplish the project and meet the requirements that we have discussed, i am estimating that it will take {{ proposal.estimated_hours}} hours in development time to complete. the project should take {{ proposal.weeks_to_complete }} weeks to complete and with my hourly rate of {{ proposal.hourly_rate }}/hour, the estimated total will be {{ proposal.hourly_rate * proposal.estimated_hours | currency:'USD':true:'.0' }}.
         </p>
 
         <p>
