--- a/freelance-camp-fe/app/proposal/proposal-show.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-show.component.html
@@ -1,9 +1,33 @@
 <div class="container">
-  <div class="card proposal-card">
-    <h1>Proposal Show</h1>
+  <div *ngIf="proposal" class="card proposal-card">
+    <h1>{{ proposal.customer }}</h1>
 
-    <div>
-      the id for this proposal is: {{ id }}
+    <div class="col-md-6">
+      <p>Hi {{ proposal.customer }},</p>
+
+      <p>
+        it was a pleasure getting to meet with you and review your project requirements, i believe it is a great fit for the types of applications that i build out. please feel free to check out some of my past projects here.
+      </p>
+
+      <p>
+        to successfully build out the application i will be utilizing {{ proposal.tools }}, and a number of other tools to ensure that the project follows industry wide best practices
+      <a href="{{ proposal.portfolio_url }}">here</a></p>
+
+      <p>
+        ensuring that you are fully informed is one of my top priorities, so in addition to incorporating everything that we have discussed, i will aso be creating a project management dashboard and sending you a project update message daily so that you can have a transparent view of the development as it takes place.
+      </p>
+
+      <p>
+        to accomplish the project and meet the requirements that we have discussed, i am estimating that it will take {{ proposal.estimated_hours}} hours in development time to complete. the project should take {{ proposal.weeks_to_complete }} weeks to complete and with my hourly rate of {{ proposal.hourly_rate }}/hour, the estimated total will be {{ proposal.hourly_rate * proposal.estimated_hours | currency:'USD':true:'.0' }}.
+      </p>
+
+      <p>
+        the next step from here is to set up a metting to finalize the project and sign contracts.
+      </p>
+
+      <p>
+        i am excited to work with you and build out this project.
+      </p>
     </div>
-  </div>  
+  </div>   
 </div>
