added form submit button for proposal form

--- a/freelance-camp-fe/app/proposal/proposal-new.component.html
+++ b/freelance-camp-fe/app/proposal/proposal-new.component.html
@@ -120,6 +120,12 @@
                    [(ngModel)]="proposal.client_email"
             >       
           </div>
+          <button type="submit" class="btn btn-outline-primary btn-lg" 
+            [disabled]="!proposalForm.form.valid"
+            [hidden]="submitted"
+          >
+            Generate Proposal
+          </button>
         </form>
       </div>
     </div>
