updated to the most current angular bootsrap

--- a/freelance-camp-fe/app/app.component.html
+++ b/freelance-camp-fe/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-fixed-top navbar-light bg-faded nav-styles">
   <div class='container'> 
-    <ul class="nav navbar-nav">
+    <ul class="nav navbar-header">
       <li class='nav-item'>
         <a class='nav-link' routerLink="/home" routerLinkActive="active">Home</a>
       </li>
@@ -12,7 +12,7 @@
           <button class="btn btn-outline-primary" id="proposalDropdown" ngbDropdownToggle>
             Proposals
           </button>
-          <div class="dropdown-menu" aria-labelledby="proposalDropdown">
+          <div ngbDropdownMenu aria-labelledby="proposalDropdown">
             <a class="dropdown-item" routerLink="/proposals" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Proposals</a>
             <a class="dropdown-item" routerLink="/proposals/new" routerLinkActive="active">New Proposal</a>
           </div>
